Fix CI fails, install a fresh version of Bundler

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,6 +11,7 @@
       - cat Gemfile
       - cat *.gemspec
   install_script:
+    - gem install bundler
     - bundle config set --local path 'vendor/bundle'
     - bundle update
 
