Add specs for excluding reserved keys from passing params and options

--- a/spec/data/general/en.yml
+++ b/spec/data/general/en.yml
@@ -19,3 +19,8 @@ en:
   users:
     one: 1 user
     other: "%{count} users"
+
+  reserved_keys:
+    scope: "%{scope} is not here"
+    default: "%{default} is not used"
+    separator: "%{separator} is not used"
