--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@ require:
   - rubocop-performance
   - rubocop-rails
   - rubocop-rake
-  # - rubocop-rspec
+  - rubocop-rspec
 
 AllCops:
   TargetRubyVersion: 3.0
@@ -50,17 +50,16 @@ Metrics/BlockLength:
 Rails/RakeEnvironment:
   Enabled: false
 
+RSpec/NestedGroups:
+  Enabled: false
+
 # TODO: fix offenses and enable cops
 
 Metrics/AbcSize:
   Enabled: false
-
-
 Metrics/CyclomaticComplexity:
   Enabled: false
-
 Metrics/MethodLength:
   Enabled: false
-
 Metrics/PerceivedComplexity:
   Enabled: false
